--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,12 +6,12 @@
   ::before,
   ::backdrop,
   ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
+    border-color: var(--color-zinc-300, currentColor);
   }
 }
 
 :root {
-  --background: #010101;
+  --background: #000000;
   --foreground: #cad3f5;
 }
 
