changed some colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,8 +11,8 @@
 }
 
 :root {
-    --background: #000000;
-    --foreground: #cad3f5;
+    --background: #111113;
+    --foreground: #ffffff;
 }
 
 body {
