--- a/app/globals.css
+++ b/app/globals.css
@@ -1,17 +1,20 @@
 @import "tailwindcss";
 
-@theme {
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
   --font-primary: var(--font-primary);
 }
 
 :root {
-  --background: #0c0c0c;
-  --foreground: #ffffff;
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 body {
-  color: var(--foreground);
   background: var(--background);
+  color: var(--foreground);
+  font-family: var(--font-primary);
 }
 
 ::-webkit-scrollbar {
