--- a/app/globals.css
+++ b/app/globals.css
@@ -1,18 +1,28 @@
 @import "tailwindcss";
 
+@theme {
+  --color-primary: #f3f3f3;
+  --color-secondary: #171717;
+}
+
+@dark {
+  --color-primary: #171717;
+  --color-secondary: #f3f3f3;
+}
+
+@variant dark (&:where(.dark, .dark *));
+
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-primary: var(--font-primary);
+  --text-color: var(--color-primary);
+  --background-color: var(--color-secondary);
 }
 
-:root {
-  --background: #121212;
-  --foreground: #d4d4d8;
+html {
+  transition-property: background-color, color;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: var(--font-primary);
+::-webkit-scrollbar {
+  width: 0px;
 }
