--- a/app/globals.css
+++ b/app/globals.css
@@ -1,47 +1,28 @@
 @import "tailwindcss";
 
 :root {
-  --background: #191919;
-  --foreground: #f0f0f0;
+  --background: #ffffff;
+  --foreground: #191919;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-bodyFont: var(--font-bodyFont);
+}
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+.dark {
+  --background: #191919;
+  --foreground: #f0f0f0;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-bodyFont);
+  font-family: "Alliance", sans-serif;
 }
 
-/* Custom slim scrollbar: 7px wide, transparent track, #282828 thumb */
-* {
-  /* Firefox: approximate slim width (can't set px exactly) */
-  scrollbar-width: thin;
-  /* thumb then track */
-  scrollbar-color: #353535 transparent;
-}
-
-/* WebKit browsers (Chrome, Edge, Safari) */
 ::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
-}
-
-::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #353535;
-  border-radius: 99px;
-  border: 0;
-  min-height: 30px;
-}
-
-::-webkit-scrollbar-corner {
-  background: transparent;
+  display: none;
 }
