--- a/apps/blogs/app/globals.css
+++ b/apps/blogs/app/globals.css
@@ -8,13 +8,12 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-bodyFont: var(--font-bodyFont);
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-bodyFont);
+  font-family: var(--font-roboto);
 }
 
 * {
